--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeEditSkillCertificationVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeEditSkillCertificationVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -61,7 +61,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技能介绍" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpq-9B-IT9">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技能简介" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpq-9B-IT9">
                                     <rect key="frame" x="16" y="57" width="70" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="Kzo-gr-uKp"/>
@@ -71,7 +71,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入技能介绍" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cvm-Ou-jQg">
+                                <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入技能简介" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cvm-Ou-jQg">
                                     <rect key="frame" x="94" y="53" width="265" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="POu-to-h6P"/>
@@ -171,7 +171,7 @@
                 <constraint firstItem="RdN-hZ-cr2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="bZs-rj-maS"/>
                 <constraint firstItem="4cE-3n-sOg" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="eFv-5b-zZE"/>
             </constraints>
-            <point key="canvasLocation" x="-372" y="-121"/>
+            <point key="canvasLocation" x="10" y="14"/>
         </view>
     </objects>
 </document>
