--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,9 +20,9 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qFr-EQ-gpt">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="qFr-EQ-gpt">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="K7a-BH-aEM"/>
                         <outlet property="delegate" destination="-1" id="eav-EX-Zef"/>
@@ -36,7 +36,7 @@
                 <constraint firstItem="qFr-EQ-gpt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="imZ-dH-nke"/>
                 <constraint firstAttribute="bottom" secondItem="qFr-EQ-gpt" secondAttribute="bottom" id="nyN-8f-uvv"/>
             </constraints>
-            <point key="canvasLocation" x="-303" y="43"/>
+            <point key="canvasLocation" x="-169" y="60"/>
         </view>
     </objects>
 </document>
